fixed horizontal scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,10 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+html,
+body {
+  overflow-x: hidden;
+}
 html {
   scroll-behavior: smooth;
 }
@@ -45,8 +48,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-
-  @apply overflow-x-hidden;
+  position: relative
 }
 
 h1 {
@@ -111,5 +113,11 @@ button:focus-visible {
 
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (max-width: 768px) {
+  .your-element {
+    max-width: 100%;
   }
 }
